# sp_ask_admin_dashboard

./: .gitignore  .gitlab-ci.yml  .service  Dockerfile  LICENSE.md  Makefile  README.md  Vagrantfile  ansible.cfg  buddies_report.py  daily_report.py  daily_report_york.py  docker-compose.yml  docker_command.txt  env-exemple  fedora-33-docker-install.txt  inventory  manage.py  nginx.default  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  secrets-exemple  service-exemple.txt  start-server.sh  todo.todo  todo_list.txt  ubuntu-playbook.yml  views_search.py
ansible/: add-user.yml  command.txt  odesi-playbook.yml  test.yml
ansible/group_vars/: centos.yml
ansible/keys/: ansible_git  ansible_git.pub
ansible/vars/: main.yml
apps/pivottables/: apps.py
cmdline/: daily_report.py  service_lh3.py
copyfiles/tasks/: main.yml
dashboard/: models.py
dashboard/migrations/: 0001_initial.py  0002_auto_20210607_2032.py  0002_auto_20210922_0012.py  0003_auto_20210607_2034.py  0003_auto_20210922_0014.py  0004_auto_20210922_0015.py
dashboard/templates/: chord_diagram.html  homepage.html  pivot.html  pivottable.html  surveys.html  try_search.html
dashboard/templatetags/: search_helper.py
dashboard/tests/: test_models.py  test_report.py  (+1 more)
docs/: conf.py  dashboard.migrations.rst  dashboard.rst  dashboard.tests.rst  dashboard.utils.rst  dashboard.views.rst  dashboard_env.rst  index.rst  lh3.rst  modules.rst  project_config.rst
lh3/: api.py  utils.py
project_config/: settings.py  wsgi.py
sp_lh3_dashboard_config/: settings.py  urls.py
static/js/: app.js
(+50 files in other folders)
